Fix bg surface color for light/dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,6 +23,7 @@
   --ifm-color-primary-lightest: #ffdb54;
   --ifm-navbar-search-input-color: var(--ifm-color-gray-900);
   --ifm-background-color: #fff;
+  --ifm-background-surface-color: #fff;
   --ifm-footer-background-color: #2d3436 !important;
   --ifm-footer-title-color: #fff;
   --ifm-footer-link-color: #fff;
@@ -47,8 +48,7 @@ html[data-theme="dark"] {
   --ifm-color-emphasis-900: var(--ifm-color-gray-100);
   --ifm-background-color: #3b4446;
   --ifm-navbar-background-color: #2d3436;
-  --ifm-background-surface-color: transparent !important;
-  --ifm-background-surface-color: #1e2125;
+  --ifm-background-surface-color: #3b4446;
   --ifm-footer-background-color: #2d3436 !important;
   --ifm-footer-link-color: #fff;
   --ifm-footer-title-color: #fff;
